crates/strider-analyze/tests/snapshots/v3__aarch64__builtins__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x7e0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0xdeadbeef:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x7f4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "8" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x10000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "8" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "13" -> "8" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "14" -> "8" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "8" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x800:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x10000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "21" -> "15" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "22" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x810:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "22" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xdeadbeefcafebabe:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "22" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "27" -> "22" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "28" -> "22" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "29" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "22" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x824:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x10000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "33" -> "29" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "34" -> "29" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "35" -> "29" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "36" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "29" -> "36" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x830:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "39" -> "36" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x32:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "40" -> "36" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "41" -> "36" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "42" -> "36" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "43" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "36" -> "43" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "46" -> "43" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v47" [color="#888888", style=dashed];
  "v47" -> "43" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v48" [color="#888888", style=dashed];
  "v48" -> "43" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "46" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "49" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v52" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v52" [color="#888888", style=dashed];
  "v52" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "53" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "55" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "55" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "53" [label="MemPartition[MemPartitionId(6)]", shape=trapezium, fillcolor="#3a1a4a"];
  "36" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "49" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "57" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "57" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "53" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v58" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v58" -> "57" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "57" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "59" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v61" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v61" [color="#888888", style=dashed];
  "v61" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "62" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "59" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "62" [label="MemPartition[MemPartitionId(5)]", shape=trapezium, fillcolor="#3a1a4a"];
  "29" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "60" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "63" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "63" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "62" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "65" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v67" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v67" [color="#888888", style=dashed];
  "v67" -> "66" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "65" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "68" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "65" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "68" [label="MemPartition[MemPartitionId(4)]", shape=trapezium, fillcolor="#3a1a4a"];
  "22" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "66" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "69" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "69" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "68" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "71" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v73" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v73" [color="#888888", style=dashed];
  "v73" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "71" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "74" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "71" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "74" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "15" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "72" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "75" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "75" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "74" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v76" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v76" -> "75" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "75" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "77" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v79" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v79" [color="#888888", style=dashed];
  "v79" -> "78" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "77" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "80" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "77" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "80" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "8" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "78" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "81" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "81" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "80" -> "81" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "81" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "81" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "83" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "84" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v85" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v85" [color="#888888", style=dashed];
  "v85" -> "84" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "83" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "86" -> "83" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "83" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "86" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "84" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "14" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "87" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "87" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "86" -> "87" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v88" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v88" -> "87" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "87" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nx2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "89" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "89" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "90" -> "89" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v91" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v91" -> "89" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "92" -> "89" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "92" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "90" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "93" -> "90" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v94" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v94" -> "90" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "95" -> "90" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "95" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "93" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "96" -> "93" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v97" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v97" -> "93" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "98" -> "93" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "98" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "96" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "99" -> "96" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "99" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
